# cursor-gateway

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  RELEASE_NOTES_v0.1.1.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci-telegram-smoke.yml  desktop-windows.yml
apps/: server-reports.ts
apps/browser-extension/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/: .gitignore  README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/permissions/: desktop-shell.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/hermes-runner/: hermes_cursor_runner.py  test_hermes_cursor_runner.py
apps/secure-adapter/: package.json
apps/secure-web/: index.html  package.json  passkey-bridge.html  playwright.config.ts  (+2 more)
docs/: cg-mitm.md  cs-relay-ops.md  cs-secure-redirect-e2ee.md  csapi.md  deploy.md  e2ee.md  foolproof-deploy.md  gateway-performance-refactor-plan.md  interview-commercialization.md  pairing-mail.md  runner-manual-code-pairing.md  runner.md  secure-web-e2ee.md  secure-web-verifier.md  signed-release.md  telegram-smoke-e2e.md  trust-root-rotation.md  trusted-cs-relay.md  windows-client.md  windows-runner.md  快速开始.md
infra/: Caddyfile  apply-nginx-and-redeploy.sh  deploy-perf-refactor.sh  deploy-vps.sh  docker-compose.yml  hermes-gateway-telegram2.resource.conf  nginx-cs.joelzt.org.conf  nginx-csapi.joelzt.org.conf  nginx-gateway.conf  nginx-secure.joelzt.org.conf  reverse-proxy.md
(+377 files in other folders)
