[package]
name = "cursor-gateway-desktop"
version = "0.1.4"
description = "Cursor Gateway Windows desktop shell (loads Secure Web E2EE UI locally)"
authors = ["Cursor Gateway"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cursor_gateway_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tokio = { version = "1", features = ["time", "sync", "rt"] }
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
